--- a/3.projekte/projekti-1/assets/style/style.css
+++ b/3.projekte/projekti-1/assets/style/style.css
@@ -8,15 +8,13 @@ body{
 	padding:0;
 	box-sizing: border-box;
 	font-family: 'Montserrat', sans-serif;
+	box-sizing: border-box;
 }
-*,
-*::before,
-*::after{
-    box-sizing: border-box;
-}
+
 html{
     font-family: 'Montserrat', sans-serif;
     line-height: 1.15;
+	scroll-behavior: smooth;
 }
 /*header*/
 header{
@@ -39,6 +37,7 @@ header ul li a{
 header ul li a:hover{
 	text-decoration: none;
 	border-bottom: #24262b 2px solid;
+	transition: 75ms;
 }
 header img{
 	padding: 10px 0px 0px 10px;
@@ -47,7 +46,7 @@ header img{
 .hero-img{
 	width: 100%;
 	height: 650px;
-	background-image: url(../images/Agatha\ bedroom.webp);
+	background-image: url(../images/Cam1.jpg);
 	box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.6);
 	background-repeat: no-repeat;
 	background-position: center;
@@ -55,7 +54,7 @@ header img{
 }
 .hero-img img{
 	width: 300px;
-	padding-top: 250px;
+	margin-top: 250px;
 }
 .hero-img h2{
 	font-size: 50px;
@@ -65,50 +64,121 @@ header img{
 /*About Us*/
 .about-us{
 	width: 100%;
-	height: 300px;
+	height: auto;
 	padding-left: 15px;
 	padding-top: 25px;
-}
-.about-us h2{
+	margin-bottom: 75px;
 	text-align: center;
 }
-.about-us button{
-	width: 150px;
-	height: 50px;
-	margin-top: 20px;
-	margin-left: 45.8%;
-	background-color: #bd6c37;
-	border: 1px solid #bd6c37;
-	font-size: 15px;
-	color: #fff;
+
+.about-us h2{
+	text-align: center;
+	font-size: 30px;
+	margin-bottom: 20px;
 }
-.about-us button:hover{
-	background-color: #d8834a;
-	cursor: pointer;
+.about-us p{
+	width: 750px;
+	height: 250px;
+	padding: 10px;
+	display: inline-block;
 }
 
 /*Products*/
 #products{
 	text-align: center;
+	margin-bottom: 50px;
+	font-size: 30px;
 }
 .rows{
 	display: flex;
 	flex-wrap: wrap;
-	padding: 10px 10px;
+	margin: 10px 10px;
 
 }
 .column{
-	flex: 33.33%;
+	flex: 50%;
 	padding: 10px 10px;
+	justify-content: space-between;
+	margin-bottom: 15px;
 }
+
+
 .img{
-	padding-bottom: 10px;
+	margin: 0px 0px 50px 250px;
+	background-image: url(../../assets/images/edge\ sideboard\ BLACK\ front.jpg);
+	background-size: 500px 500px;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 400px;
+	width: 500px;
+	text-align: center;
 }
-.rows img:hover{
+.img2{
+	margin: 0px 0px 50px 50px;
+	background-image: url(../../assets/images/edge\ sideboard\ new\ 2.jpg);
+	background-size: 500px 500px;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 400px;
+	width: 500px;
+	text-align: center;
+}
+
+.img h2{
+	padding-top: 150px;
+}
+.img2 h2{
+	padding-top: 150px;
+}
+
+#img-text{
+	display: none;
+	color: #fff;
+}
+#img-text button{
+	width: 150px;
+	height: 50px;
+	margin-top: 15px;
+	font-size: 15px;
+	color: #fff;
+	background-color: transparent;
+	border: transparent;
+}
+.img:hover{
+	box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.4);
+	transition: 0.3s;
+}
+.img2:hover{
+	box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.4);
+	transition: 0.3s;
+}
+#img-text button:hover{
 	cursor: pointer;
-	background-color: #000;
-	opacity: 0.8;
-	
+	border: 1px solid #fff;
+	transition: 0.3s;
+}
+
+.img:hover #img-text{
+	display: block;
+}
+.img2:hover #img-text{
+	display: block;
+}
+#shop {
+	width: 175px;
+	height: 50px;
+	margin-top: 20px;
+	margin-left: 45%;
+	margin-bottom: 30px;
+	background-color: #bd6c37;
+	border: 1px solid #bd6c37;
+	font-size: 15px;
+	color: #fff;
+}
+#shop:hover{
+	background-color: #d8834a;
+	border: 1px solid #d8834a;
+	cursor: pointer;
 }
 
 /*contact-us*/
@@ -199,6 +269,8 @@ position: relative;
 .costum-3d-form.error input{
 	border:2px solid red;
 }
+
+/*Footer*/
 #container{
 	max-width: 1170px;
 	margin:auto;
@@ -212,8 +284,15 @@ position: relative;
     padding: 70px 0px 30px;
 }
 .footer-col{
-   width: 25%;
+   width: 33.33%;
    padding: 0 15px;
+}
+.footer-col p{
+	padding-top: 20px;
+	padding-right: 75px;
+}
+#follow-us{
+	padding-top: 20px;
 }
 #info{
 	padding-top: 40px;
@@ -223,26 +302,13 @@ position: relative;
 	width: 300px;
 }
 .logo{
-	padding: 0px 50px 0px 135px;
-	padding-top: 0px;
-}
-.logo a{
-	font-size: 16px;
-	text-transform: capitalize;
-	color: #ffffff;
-	text-decoration: none;
-	font-weight: 300;
-	color: #bbbbbb;
-	transition: all 0.3s ease;
-}
-.logo a:hover{
-	color: #ffffff;
-	padding-left: 8px;
-}
-.logo p{
-	color: #ffffff;
-	padding-top: 45px;
-	text-align: center;
+	background-image: url(../images/logo\ 4B\ studio\ bardh\ cutout.png);
+	background-size: 300px auto;
+	background-repeat: no-repeat;
+	background-position: center;
+	width: 300px;
+	height: 150px;
+	padding-bottom: 10px;
 }
 #follow-us{
 	padding-left: 100px;
@@ -300,4 +366,8 @@ position: relative;
 .footer-col .social-links a:hover{
 	color: #24262b;
 	background-color: #ffffff;
+}
+
+@media(min-width:421){
+
 }
